Autoconf/make improvements
* Use check-provided AM macro instead of using AC_CHECK_LIB (which implicitly
put the library in the standard link arguments).

* Use check-provided CHECK_{LIBS,CFLAGS}.

* Consolidate LDADD options for tests into subdir-wide default.

* Add TODO item for figuring out how to skip check if not installed.

--- a/TODO
+++ b/TODO
@@ -39,3 +39,4 @@ Longer term
 * shadow/gshadow support
 * Support globbing in conf file?
 * Improve automake/conf/libtool use
+** Find way to skip checks if 'check' is not installed
